# tsimporter

./: README.md  pyproject.toml
notebook/: 1_parquet_to_postgres.ipynb
src/tsimporter/: __init__.py  importer.py  logging_config.py
